--- a/index.html
+++ b/index.html
@@ -16,10 +16,13 @@
 			text-align: center;
 			padding: 1em 0;
 			display: block;
-			border-radius: 3px;
 		}
 
 		.row {
+			margin-bottom: 2em;
+		}
+
+		.row-flush {
 			margin-bottom: 2em;
 		}
 
@@ -27,195 +30,194 @@
 </head>
 <body>
 	<!-- Grid system -->
-
-	<div class="container">
-		<h1>Grid System</h1>
-
-		<hr>
-
-
-		<div class="row">
-			<div class="col-12">
-				<div class="demo-col">.col-12</div>
-			</div> <!-- end col-12 -->
-		</div> <!-- end row -->
-
-		<div class="row">
-			<div class="col-6">
-				<div class="demo-col">.col-6</div>
-			</div> <!-- end col-6 -->
-			<div class="col-6">
-				<div class="demo-col">.col-6</div>
-			</div> <!-- end col-6 -->
-		</div> <!-- end row -->
-
-		<div class="row">
-			<div class="col-4">
-				<div class="demo-col">.col-4</div>
-			</div> <!-- end col-4 -->
-			<div class="col-4">
-				<div class="demo-col">.col-4</div>
-			</div> <!-- end col-4 -->
-			<div class="col-4">
-				<div class="demo-col">.col-4</div>
-			</div> <!-- end col-4 -->
-		</div> <!-- end row -->
-
-		<div class="row">
-			<div class="col-3">
-				<div class="demo-col">.col-3</div>
-			</div> <!-- end col-3 -->
-			<div class="col-3">
-				<div class="demo-col">.col-3</div>
-			</div> <!-- end col-3 -->
-			<div class="col-3">
-				<div class="demo-col">.col-3</div>
-			</div> <!-- end col-3 -->
-			<div class="col-3">
-				<div class="demo-col">.col-3</div>
-			</div> <!-- end col-3 -->
-		</div> <!-- end row -->
-
-		<div class="row">
-			<div class="col-2">
-				<div class="demo-col">.col-2</div>
-			</div> <!-- end col-2 -->
-			<div class="col-2">
-				<div class="demo-col">.col-2</div>
-			</div> <!-- end col-2 -->
-			<div class="col-2">
-				<div class="demo-col">.col-2</div>
-			</div> <!-- end col-2 -->
-			<div class="col-2">
-				<div class="demo-col">.col-2</div>
-			</div> <!-- end col-2 -->
-			<div class="col-2">
-				<div class="demo-col">.col-2</div>
-			</div> <!-- end col-2 -->
-			<div class="col-2">
-				<div class="demo-col">.col-2</div>
-			</div> <!-- end col-2 -->
-		</div> <!-- end row -->
-
-		<div class="row">
-			<div class="col-1">
-				<div class="demo-col">.col-1</div>
-			</div> <!-- end col-1 -->
-			<div class="col-1">
-				<div class="demo-col">.col-1</div>
-			</div> <!-- end col-1 -->
-			<div class="col-1">
-				<div class="demo-col">.col-1</div>
-			</div> <!-- end col-1 -->
-			<div class="col-1">
-				<div class="demo-col">.col-1</div>
-			</div> <!-- end col-1 -->
-			<div class="col-1">
-				<div class="demo-col">.col-1</div>
-			</div> <!-- end col-1 -->
-			<div class="col-1">
-				<div class="demo-col">.col-1</div>
-			</div> <!-- end col-1 -->
-			<div class="col-1">
-				<div class="demo-col">.col-1</div>
-			</div> <!-- end col-1 -->
-			<div class="col-1">
-				<div class="demo-col">.col-1</div>
-			</div> <!-- end col-1 -->
-			<div class="col-1">
-				<div class="demo-col">.col-1</div>
-			</div> <!-- end col-1 -->
-			<div class="col-1">
-				<div class="demo-col">.col-1</div>
-			</div> <!-- end col-1 -->
-			<div class="col-1">
-				<div class="demo-col">.col-1</div>
-			</div> <!-- end col-1 -->
-			<div class="col-1">
-				<div class="demo-col">.col-1</div>
-			</div> <!-- end col-1 -->
-		</div> <!-- end row -->
-
-		<div class="row">
-			<div class="col-5">
-				<div class="demo-col">.col-5</div>
-			</div> <!-- end col-5 -->
-			<div class="col-7">
-				<div class="demo-col">.col-7</div>
-			</div> <!-- end col-7 -->
-		</div> <!-- end row -->
-
-		<div class="row">
-			<div class="col-4">
-				<div class="demo-col">.col-4</div>
-			</div> <!-- end col-4 -->
-			<div class="col-8">
-				<div class="demo-col">.col-8</div>
-			</div> <!-- end col-8 -->
-		</div> <!-- end row -->
-
-		<div class="row">
-			<div class="col-3">
-				<div class="demo-col">.col-3</div>
-			</div> <!-- end col-3 -->
-			<div class="col-9">
-				<div class="demo-col">.col-9</div>
-			</div> <!-- end col-9 -->
-		</div> <!-- end row -->
-
-		<div class="row">
-			<div class="col-2">
-				<div class="demo-col">.col-2</div>
-			</div> <!-- end col-2 -->
-			<div class="col-10">
-				<div class="demo-col">.col-10</div>
-			</div> <!-- end col-10 -->
-		</div> <!-- end row -->
-
-		<div class="row">
-			<div class="col-1">
-				<div class="demo-col">.col-1</div>
-			</div> <!-- end col-1 -->
-			<div class="col-11">
-				<div class="demo-col">.col-11</div>
-			</div> <!-- end col-11 -->
-		</div> <!-- end row -->
-
-		<div class="row">
-			<div class="col-half">
-				<div class="demo-col">.col-half</div>
-			</div> <!-- end half -->
-			<div class="col-half">
-				<div class="demo-col">.col-half</div>
-			</div> <!-- end half -->
-		</div> <!-- end row -->
-
-		<div class="row">
-			<div class="col-third">
-				<div class="demo-col">.col-third</div>
-			</div> <!-- end third -->
-			<div class="col-two-thirds">
-				<div class="demo-col">.col-two-thirds</div>
-			</div> <!-- end col-two-thirds -->
-		</div> <!-- end row -->
-
-		<div class="row">
-			<div class="col-quarter">
-				<div class="demo-col">.col-quarter</div>
-			</div> <!-- end col-quarter -->
-			<div class="col-three-quarters">
-				<div class="demo-col">.col-three-quarters</div>
-			</div> <!-- end col-three-quarters -->
-		</div>
-
-		<div class="row">
-			<div class="col-quarter small-quarter">
-				<div class="demo-col">.col-quarter</div>
-			</div> <!-- end col-quarter -->
-			<div class="col-three-quarters small-three-quarters">
-				<div class="demo-col">.col-three-quarters</div>
-			</div> <!-- end col-three-quarters -->
-		</div>
+	
+	<section>
+		<div class="container">
+			<h1>Grid System</h1>
+		
+			<div class="row">
+				<div class="col-12">
+					<div class="demo-col">.col-12</div>
+				</div> <!-- end col-12 -->
+			</div> <!-- end row -->
+		
+			<div class="row">
+				<div class="col-6">
+					<div class="demo-col">.col-6</div>
+				</div> <!-- end col-6 -->
+				<div class="col-6">
+					<div class="demo-col">.col-6</div>
+				</div> <!-- end col-6 -->
+			</div> <!-- end row -->
+		
+			<div class="row">
+				<div class="col-4">
+					<div class="demo-col">.col-4</div>
+				</div> <!-- end col-4 -->
+				<div class="col-4">
+					<div class="demo-col">.col-4</div>
+				</div> <!-- end col-4 -->
+				<div class="col-4">
+					<div class="demo-col">.col-4</div>
+				</div> <!-- end col-4 -->
+			</div> <!-- end row -->
+		
+			<div class="row">
+				<div class="col-3">
+					<div class="demo-col">.col-3</div>
+				</div> <!-- end col-3 -->
+				<div class="col-3">
+					<div class="demo-col">.col-3</div>
+				</div> <!-- end col-3 -->
+				<div class="col-3">
+					<div class="demo-col">.col-3</div>
+				</div> <!-- end col-3 -->
+				<div class="col-3">
+					<div class="demo-col">.col-3</div>
+				</div> <!-- end col-3 -->
+			</div> <!-- end row -->
+		
+			<div class="row">
+				<div class="col-2">
+					<div class="demo-col">.col-2</div>
+				</div> <!-- end col-2 -->
+				<div class="col-2">
+					<div class="demo-col">.col-2</div>
+				</div> <!-- end col-2 -->
+				<div class="col-2">
+					<div class="demo-col">.col-2</div>
+				</div> <!-- end col-2 -->
+				<div class="col-2">
+					<div class="demo-col">.col-2</div>
+				</div> <!-- end col-2 -->
+				<div class="col-2">
+					<div class="demo-col">.col-2</div>
+				</div> <!-- end col-2 -->
+				<div class="col-2">
+					<div class="demo-col">.col-2</div>
+				</div> <!-- end col-2 -->
+			</div> <!-- end row -->
+		
+			<div class="row">
+				<div class="col-1">
+					<div class="demo-col">.col-1</div>
+				</div> <!-- end col-1 -->
+				<div class="col-1">
+					<div class="demo-col">.col-1</div>
+				</div> <!-- end col-1 -->
+				<div class="col-1">
+					<div class="demo-col">.col-1</div>
+				</div> <!-- end col-1 -->
+				<div class="col-1">
+					<div class="demo-col">.col-1</div>
+				</div> <!-- end col-1 -->
+				<div class="col-1">
+					<div class="demo-col">.col-1</div>
+				</div> <!-- end col-1 -->
+				<div class="col-1">
+					<div class="demo-col">.col-1</div>
+				</div> <!-- end col-1 -->
+				<div class="col-1">
+					<div class="demo-col">.col-1</div>
+				</div> <!-- end col-1 -->
+				<div class="col-1">
+					<div class="demo-col">.col-1</div>
+				</div> <!-- end col-1 -->
+				<div class="col-1">
+					<div class="demo-col">.col-1</div>
+				</div> <!-- end col-1 -->
+				<div class="col-1">
+					<div class="demo-col">.col-1</div>
+				</div> <!-- end col-1 -->
+				<div class="col-1">
+					<div class="demo-col">.col-1</div>
+				</div> <!-- end col-1 -->
+				<div class="col-1">
+					<div class="demo-col">.col-1</div>
+				</div> <!-- end col-1 -->
+			</div> <!-- end row -->
+		
+			<div class="row">
+				<div class="col-5">
+					<div class="demo-col">.col-5</div>
+				</div> <!-- end col-5 -->
+				<div class="col-7">
+					<div class="demo-col">.col-7</div>
+				</div> <!-- end col-7 -->
+			</div> <!-- end row -->
+		
+			<div class="row">
+				<div class="col-4">
+					<div class="demo-col">.col-4</div>
+				</div> <!-- end col-4 -->
+				<div class="col-8">
+					<div class="demo-col">.col-8</div>
+				</div> <!-- end col-8 -->
+			</div> <!-- end row -->
+		
+			<div class="row">
+				<div class="col-3">
+					<div class="demo-col">.col-3</div>
+				</div> <!-- end col-3 -->
+				<div class="col-9">
+					<div class="demo-col">.col-9</div>
+				</div> <!-- end col-9 -->
+			</div> <!-- end row -->
+		
+			<div class="row">
+				<div class="col-2">
+					<div class="demo-col">.col-2</div>
+				</div> <!-- end col-2 -->
+				<div class="col-10">
+					<div class="demo-col">.col-10</div>
+				</div> <!-- end col-10 -->
+			</div> <!-- end row -->
+		
+			<div class="row">
+				<div class="col-1">
+					<div class="demo-col">.col-1</div>
+				</div> <!-- end col-1 -->
+				<div class="col-11">
+					<div class="demo-col">.col-11</div>
+				</div> <!-- end col-11 -->
+			</div> <!-- end row -->
+		
+			<div class="row">
+				<div class="col-half">
+					<div class="demo-col">.col-half</div>
+				</div> <!-- end half -->
+				<div class="col-half">
+					<div class="demo-col">.col-half</div>
+				</div> <!-- end half -->
+			</div> <!-- end row -->
+		
+			<div class="row">
+				<div class="col-third">
+					<div class="demo-col">.col-third</div>
+				</div> <!-- end third -->
+				<div class="col-two-thirds">
+					<div class="demo-col">.col-two-thirds</div>
+				</div> <!-- end col-two-thirds -->
+			</div> <!-- end row -->
+		
+			<div class="row">
+				<div class="col-quarter">
+					<div class="demo-col">.col-quarter</div>
+				</div> <!-- end col-quarter -->
+				<div class="col-three-quarters">
+					<div class="demo-col">.col-three-quarters</div>
+				</div> <!-- end col-three-quarters -->
+			</div>
+		
+			<div class="row">
+				<div class="col-quarter small-quarter">
+					<div class="demo-col">.small-quarter</div>
+				</div> <!-- end col-quarter small-quarter -->
+				<div class="col-three-quarters small-three-quarters">
+					<div class="demo-col">.small-three-quarters</div>
+				</div> <!-- end col-three-quarters small-three-quarters -->
+			</div>
+	</section>
 
 	</div> <!-- end container -->
 </body>
