--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
 	<section>
 		<div class="container">
 			<h1>Grid System</h1>
-		
+			
+			<hr>
+
 			<div class="row">
 				<div class="col-12">
 					<div class="demo-col">.col-12</div>
@@ -217,6 +219,69 @@
 					<div class="demo-col">.small-three-quarters</div>
 				</div> <!-- end col-three-quarters small-three-quarters -->
 			</div>
+	</section>
+
+	<section>
+		<div class="container">
+			<h1>Typography</h1>
+
+			<hr>
+
+			<div class="row">
+				<div class="col-half">
+					<h1>Heading 1</h1>
+					<h2>Heading 2</h2>
+					<h3>Heading 3</h3>
+					<h4>Heading 4</h4>
+					<h5>Heading 5</h5>
+					<h6>Heading 6</h6>
+				</div> <!-- end col-half -->
+				<div class="col-half">
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque totam quisquam nulla, sequi voluptatem ullam eligendi dolore ex, ratione itaque porro rerum illum temporibus. <a href="#">Expedita neque, suscipit veniam</a> ratione hic.</p>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi repellendus tempore <strong>rerum vel iste</strong>, delectus assumenda inventore. <em>Deleniti fugiat</em>, nobis, iure <strike>consectetur aliquam</strike> excepturi, ut deserunt tempore expedita in blanditiis!</p>
+
+<pre><code>.row {
+	margin-left: -$gutter / 2;
+	margin-right: -$gutter / 2;
+}
+
+.row-flush {
+	margin-left: 0;
+	margin-right: 0;
+}</code></pre>
+				</div> <!-- end col-half -->
+			</div> <!-- end row -->
+
+			<div class="row">
+				<div class="col-half">
+					<h4>Unordered List</h4>
+					<ul>
+						<li>Item1</li>
+						<li>Item2</li>
+						<li>Item3</li>
+						<li>Item4</li>
+						<li>Item5</li>
+					</ul>
+				</div> <!-- end col-half -->
+				<div class="col-half">
+					<h4>Ordered List</h4>
+					<ol>
+						<li>Item1</li>
+						<li>Item2</li>
+						<li>Item3</li>
+						<li>Item4</li>
+						<li>Item5</li>
+					</ol>
+				</div> <!-- end col-half -->
+			</div> <!-- end row -->
+
+			<hr>
+
+			<blockquote>
+				This is a blockquote
+				<footer><a href="#">This is the author</a></footer>
+			</blockquote>
+		</div> <!-- end container -->
 	</section>
 
 	</div> <!-- end container -->
