--- a/index.html
+++ b/index.html
@@ -284,6 +284,40 @@
 		</div> <!-- end container -->
 	</section>
 
+	<section>
+		<div class="container">
+			<h1>Buttons</h1>
+
+			<hr>
+
+			<div class="row">
+				<div class="col-4">
+					<h4>Button Styles</h4>
+					<p>
+						<button class="btn">Default Button</button>
+						<button class="btn-primary">Primary Button</button>
+						<button class="btn rounded">Rounded Button</button>
+					</p>
+				</div> <!-- end col-4 -->
+				<div class="col-4">
+					<h4>Button Sizes</h4>
+					<p>
+						<p><button class="btn-small">Small Button</button></p>
+						<p><button class="btn">Default Button</button></p>
+						<p><button class="btn-large">Large Button</button></p>
+					</p>
+				</div>
+				<div class="col-4">
+					<h4>HTML elements</h4>
+					<p><button class="btn">Button</button></p>
+					<p><a href="#" class="btn">Anchor Tag</a></p>
+					<p><input type="submit" class="btn" value="Submit Input"></p>
+					<p><input type="button" class="btn" value="Button Input"></p>
+				</div>
+			</div>
+		</div>
+	</section>
+
 	</div> <!-- end container -->
 </body>
 </html>
