adds controls for small-grid and push classes

--- a/public/index.html
+++ b/public/index.html
@@ -44,11 +44,11 @@
 			</div> <!-- end row -->
 		
 			<div class="row">
-				<div class="col-6">
-					<div class="demo-col">.col-6</div>
+				<div class="col-6 push-6">
+					<div class="demo-col">.col-6 .push-6 first</div>
 				</div> <!-- end col-6 -->
-				<div class="col-6">
-					<div class="demo-col">.col-6</div>
+				<div class="col-6 pull-6">
+					<div class="demo-col">.col-6 .pull-6 last</div>
 				</div> <!-- end col-6 -->
 			</div> <!-- end row -->
 		
@@ -297,11 +297,9 @@
 			<div class="row">
 				<div class="col-4">
 					<h4>Button Styles</h4>
-					<p>
-						<button class="btn">Default Button</button>
-						<button class="btn-primary">Primary Button</button>
-						<button class="btn rounded">Rounded Button</button>
-					</p>
+						<p><button class="btn">Default Button</button></p>
+						<p><button class="btn-primary">Primary Button</button></p>
+						<p><button class="btn rounded">Rounded Button</button></p>
 				</div> <!-- end col-4 -->
 				<div class="col-4">
 					<h4>Button Sizes</h4>
